style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');

:root {
  --prima-color-1: hsl(0, 78%, 62%);
  --prima-color-2: hsl(180, 62%, 55%);
  --prima-color-3: hsl(34, 97%, 64%);
  --prima-color-4: hsl(212, 86%, 64%);

  --neu-color-1: hsl(234, 12%, 34%);
  --neu-color-2: hsl(229, 6%, 66%);
  --neu-color-3: hsl(0, 0%, 98%);

  --fs-body: 0.95rem;

  --font-family: 'Poppins', sans-serif;

  --fw-200: 200;
  --fw-400: 400;
  --fw-600: 600;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: grid;
  place-items: center;
  min-height: 100vh;
  font-family: var(--font-family);
  background-color: var(--neu-color-3);
}

main {
  max-width: 60%;
}

.heading {
  text-align: center;
  margin: 0 auto;
  margin-bottom: 2rem;
}

.heading__first {
  font-weight: var(--fw-200);
}

.heading__message {
  color: var(--neu-color-2);
  font-size: var(--fs-body);
}

.container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 2rem;
}

section {
  background-color: var(--neu-color-3);
  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
  border-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  padding: 2rem;
  gap: 5rem;
}

section img {
  max-width: 12%;
  align-self: flex-end;
}

.supervisor {
  border-top: 4px solid var(--prima-color-2);
  transform: translateY(5rem);
}

.team-builder {
  border-top: 4px solid var(--prima-color-1);
}

.karma {
  grid-column: 2;
  grid-row: 2;
  border-top: 4px solid var(--prima-color-3);
}

.calculator {
  border-top: 4px solid var(--prima-color-4);
  transform: translateY(5rem);
}

@media (max-width: 50rem) {
  main {
    display: grid;
    gap: 3rem;
  }

  .container {
    grid-template-columns: 1fr;
  }
  section img {
    max-width: 100%;
    align-self: flex-end;
  }

  .karma {
    grid-column: auto;
    grid-row: auto;
  }

  .supervisor {
    transform: translateY(0);
  }

  .calculator {
    transform: translateY(0);
  }
}

